[package]
name = "cliox"
description = "a lightweight procedural macro designed to wrap existing command line interfaces with Rust"
repository = "https://github.com/bearbonesdev/cliox.git"
version = "0.1.0"
edition = "2024"
readme = "README.md"
keywords = ["cli", "command-line-utilities", "development-tools::cli"]
license = "MIT"
resolver = "2"

[workspace]
members = ["cliox-macros"]

[dependencies]
cliox-macros = { path = "./cliox-macros", version = "0.1.0"}
